# LockByte

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: loc_counter.yml  tests_config.yml
docs/: ALGORITHMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
src/lockbyte/: __init__.py  app.py  lock_unlock.py
src/lockbyte/assets/icons/: main_icon.icns
tests/: test_lock_unlock.py
